[metadata]
name = megaradrp
version = 0.11.dev0
author = Sergio Pascual
author_email = sergiopr@fis.ucm.es
url = https://github.com/guaix-ucm/megaradrp
license = GPLv3
description = MEGARA Data Reduction Pipeline
long_description = file:README.rst
long_description_content_type = text/rst
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
install_requires =
    setuptools>=39.2
    six
    numpy
    matplotlib
    astropy
    scipy
    numina >= 0.22
    scikit-image
    enum34; python_version<"3.4"
    contextlib2; python_version<"3.5"
    jsonschema

[options.package_data]
megaradrp = drp.yaml
megaradrp.instrument.configs =
    primary.txt
    lcb_default_header.txt
    mos_default_header.txt
    component-*.json
    instrument-*.json
    properties-*.json
megaradrp.instrument.configs.extras =
    *.json

[options.extras_require]
test =
    pytest<3.7; python_version<"3"
    pytest>=6; python_version>="3"
    pytest-remotedata
docs =
    sphinx
DB =
    sqlalchemy
    numinadb

[options.entry_points]
numina.pipeline.1 =
    MEGARA = megaradrp.loader:load_drp

numinadb.extra.1 =
    MEGARA = megaradrp.db [DB]

console_scripts =
    megaradrp-overplot_traces = megaradrp.tools.overplot_traces:main
    megaradrp-heal_traces = megaradrp.tools.heal_traces:main
    megaradrp-cube = megaradrp.processing.cube:main

[tool:pytest]
testpaths = "megaradrp"
remote_data_strict = true

[build_ext]
inplace = 0

[bdist_wheel]
universal = 1
