[metadata]
name = megaradrp
version = attr:megaradrp.__version__
author = Sergio Pascual
author_email = sergiopr@fis.ucm.es
url = https://github.com/guaix-ucm/megaradrp
license = GPLv3
license_files =
    LICENSE.txt
description = MEGARA Data Reduction Pipeline
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy

[options]
packages = find:
package_dir =
    = src
install_requires =
    setuptools>=39.2
    numpy
    matplotlib
    astropy
    scipy
    numina >= 0.22
    scikit-image
    jsonschema
    packaging

[options.packages.find]
where = src

[options.package_data]
megaradrp = drp.yaml
megaradrp.instrument.configs =
    primary.txt
    lcb_default_header.txt
    mos_default_header.txt
    component-*.json
    instrument-*.json
    properties-*.json
megaradrp.instrument.configs.extras =
    *.json
megaradrp.schemas =
    baseimage.json
    basestruct.json

[options.extras_require]
test =
    pytest
    pytest-remotedata
docs =
    sphinx
    numpydoc
DB =
    sqlalchemy
    numinadb

[options.entry_points]
numina.pipeline.1 =
    MEGARA = megaradrp.loader:load_drp

numinadb.extra.1 =
    MEGARA = megaradrp.db [DB]

console_scripts =
    megaradrp-overplot_traces = megaradrp.tools.overplot_traces:main
    megaradrp-heal_traces = megaradrp.tools.heal_traces:main
    megaradrp-cube = megaradrp.processing.cube:main

[bdist_wheel]
universal = 1
